builder/tests/10-invalid-each-value.stderr
error: expected each to be a string
   |
22 |     #[builder(each = true)]
   |                      ^^^^
